fix: fix inputs not aligned in FireFox

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  max-width: 700px;
+  max-width: 750px;
   margin: 0 auto;
   padding: var(--size-base) var(--size-base) 0 var(--size-base);
 }
